# edu

./: README.md
App2/: App2.sln
App2/App2/: App2.csproj  App2_TemporaryKey.pfx  MainPage.xaml  MainPage.xaml.cs  MyPage.xaml  MyPage.xaml.cs  NewsPage.xaml  NewsPage.xaml.cs  Package.appxmanifest
OOP/: .gitignore
OOP/lab00/: Rectangle.cpp  Rectangle.hpp  Sqr.cpp  Sqr.hpp  Triangle.cpp  Triangle.hpp  main.cpp
OOP/lab01/: Figure.hpp  Makefile  TTree.cpp  TTree.hpp  Triangle.cpp  Triangle.hpp  main.cpp
OOP/lab02/: Makefile  Rectangle.cpp  Rectangle.hpp  Sqr.cpp  TTree.cpp  TTree.hpp  Tree.cpp  Tree.hpp  Triangle.hpp  main.cpp
OOP/lab03/: Figure.hpp  Makefile  Rectangle.cpp  Rectangle.hpp  Sqr.cpp  Sqr.hpp  TTree.cpp  TTree.hpp  Tree.cpp  Tree.hpp  Triangle.hpp  main.cpp
OOP/lab04/: Makefile  TIterator.h  TStack.cpp  TStack.h  TStackItem.cpp  TStackItem.h  Triangle.h  lab04  main.cpp
OOP/lab05/: Makefile  TAllocationBlock.cpp  TAllocationBlock.h  TIterator.h  TStack.cpp  TStackItem.cpp  TStackItem.h  Triangle.cpp  main.cpp
OOP/lab06/: Makefile  TAllocationBlock.cpp
OOP/lab07/: Triangle.cpp  main.cpp
OOP/lab08/: Makefile
courses/: README.md  brackets1.cs  brackets2.cs  sample.cs
courses/class 1/: brackets1.cs  brackets2.cs
courses/class 2/: Program.cs  Синтаксис языка C#.pptx
courses/class3/: Program.cs  условия и циклы.pptx
courses/class4/: Program.cs  (+1 more)
labs/MAI/: .gitignore
labs/MAI/OOP_C++_3_Sem/Lab7/: CMakeLists.txt  Rectangle.cpp  TAllocationBlock.h  TVector.h  TVector.hpp  main.cpp
linux/: Brackets.cs  Class1.cs  Library.cs  Program.cs
(+428 files in other folders)
