cmake_minimum_required(VERSION 3.8)
project(prog)
set(CMAKE_CXX_STANDARD 11)
#set(GCC_COVERAGE_COMPILE_FLAGS "-fprofile-arcs -ftest-coverage")
set(GCC_COVERAGE_LINK_FLAGS "-lm")
add_definitions(${GCC_COVERAGE_COMPILE_FLAGS})
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}")
SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${GCC_COVERAGE_LINK_FLAGS}")
set(CMAKE_C_FLAGS_DEBUG "-DNDEBUG")
set(CMAKE_INSTALL_PREFIX ../..)
include_directories(${CMAKE_CURRENT_BINARY_DIR} ..)
file(GLOB CPPS "*.cpp")
add_definitions(-O2 -pedantic -Wall -Werror -Wno-sign-compare -Wno-long-long)
add_executable(${PROJECT_NAME} ${CPPS})
target_link_libraries(${PROJECT_NAME})